update thread demo

--- a/Thread/thread_test/CMakeLists.txt
+++ b/Thread/thread_test/CMakeLists.txt
@@ -5,4 +5,8 @@ set(CMAKE_CXX_STANDARD 11)
 
 link_libraries(pthread)
 
-add_executable(thread_test main.cpp)
+#add_executable(thread_test std_thread_demo.cpp)
+add_executable(thread_test pthread_demo.cpp)
+#add_executable(thread_test pthread_demo1.cpp)
+#add_executable(thread_test pthread_demo2.cpp)
+#add_executable(thread_test pthread_demo3.cpp)
